[gd_scene load_steps=8 format=2]

[ext_resource path="res://subscenes/LevelEndedButtons.gd" type="Script" id=1]
[ext_resource path="res://images/buttons/you_win.png" type="Texture" id=2]
[ext_resource path="res://images/buttons/try_again.png" type="Texture" id=3]
[ext_resource path="res://images/buttons/main_menu.png" type="Texture" id=4]
[ext_resource path="res://images/buttons/next_level.png" type="Texture" id=5]

[sub_resource type="DynamicFontData" id=1]

font_path = ""

[sub_resource type="DynamicFont" id=2]

size = 15
use_mipmaps = false
use_filter = false
font_data = SubResource( 1 )
_sections_unfolded = [ "Font", "Font/fallback", "Settings" ]

[node name="Node2D" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="LevelOverTitle" type="Sprite" parent="." index="0"]

position = Vector2( 277.618, 220.44 )
scale = Vector2( 1, 0.612064 )
texture = ExtResource( 2 )

[node name="TryAgain" type="Button" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 120.0
margin_top = 300.0
margin_right = 435.0
margin_bottom = 451.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
icon = ExtResource( 3 )
flat = false
align = 1
_sections_unfolded = [ "Anchor", "Focus", "Margin", "Mouse", "Size Flags" ]

[node name="MainMenu" type="Button" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 118.0
margin_top = 468.0
margin_right = 433.0
margin_bottom = 619.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
icon = ExtResource( 4 )
flat = false
align = 1

[node name="NextLevel" type="Button" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 116.0
margin_top = 640.0
margin_right = 431.0
margin_bottom = 791.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
icon = ExtResource( 5 )
flat = false
align = 1
_sections_unfolded = [ "Anchor" ]

[node name="RichTextLabel" type="RichTextLabel" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 407.0
margin_bottom = 155.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = false
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "ConSwi"
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "Size Flags", "Theme", "custom_colors", "custom_constants", "custom_fonts", "custom_styles" ]

[connection signal="pressed" from="TryAgain" to="." method="_on_TryAgain_pressed"]

[connection signal="pressed" from="MainMenu" to="." method="_on_MainMenu_pressed"]

[connection signal="pressed" from="NextLevel" to="." method="_on_NextLevel_pressed"]


